--- a/case2/src/app/contract/contract/contract.component.html
+++ b/case2/src/app/contract/contract/contract.component.html
@@ -1,46 +1,112 @@
-<!-- bradcam_area_start -->
 <div class="bradcam_area breadcam_bg_2">
   <h3>Contract</h3>
 </div>
-<!-- List-->
-<div class="bg-menu table table font-weight-bold" style="padding-top: 120px ; color: black">
-  <div class="container-fluid body">
-    <div class="center container-fluid">
-      <h1 style="text-align: center ">List Contract</h1>
-      <div style="text-align: center" >
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#myModalCreateContract">
-          Create
+<div class="container">
+  <div class="row" style="margin-top: 1rem">
+    <div class="col-3">
+      <div style="text-align: center">
+        <a>
+        <button type="button" class="btn btn-primary">
+          <a [routerLink]="['/contract/create-contract']"
+             style="color:white"> Create</a>
         </button>
+        </a>
       </div>
-      <table style="border-collapse:  collapse; width: 100%" id="employeeList">
-        <thead>
-        <tr>
-          <th class="text-center">#</th>
-          <th class="text-center">Time Start</th>
-          <th class="text-center">Time End</th>
-          <th class="text-center">Deposit Amount</th>
-          <th class="text-center">Payment Amount</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr  *ngFor="let contract of contract ; index as i ">
-          <td class="text-center">{{i+1}}</td>
-          <td class="text-center">{{contract.contractStartDay}}</td>
-          <td class="text-center">{{contract.contractEndDay}}</td>
-          <td class="text-center">{{contract.contractDeposit}}</td>
-          <td class="text-center">{{contract.contractTotalMoney}}</td>
-        </tr>
-        </tbody>
-      </table>
     </div>
-    <div>
+
+    <table id="tableContract" class="table table-success table-striped"
+           border="2" style="border-collapse:  collapse;padding-top: 10px;width: 96%;margin: auto">
+      <thead>
+      <tr>
+        <th>No.</th>
+        <th>Ngày bắt đầu</th>
+        <th>Ngày kết thúc</th>
+        <th>Số tiền cọc</th>
+        <th>Khách hàng</th>
+        <th>Dịch vụ</th>
+        <th>Các dịch vụ đi kèm</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let temp of contractList">
+        <td>{{temp.stt}}</td>
+        <td>{{temp.startDate}}</td>
+        <td>{{temp.endDate}}</td>
+        <td>{{temp.deposits}}</td>
+        <td> {{temp.customer.name}}</td>
+        <td> {{temp.facility.name}}</td>
+        <td>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            +
+          </button>
+          <a href="1" class="btn " style="margin-left: 1.5rem;color: black">Danh sách các dịch vụ đi kèm</a>
+        </td>
+      </tr>
+      </tbody>
+
+    </table>
+    <div style="text-align: end;margin-top: 1rem;margin-bottom: 2rem;margin-right: 2rem">
       <button class="btn btn-light">Previous</button>
       <button class="btn btn-light">1</button>
       <button class="btn btn-light">2</button>
-      <button class="btn btn-light">...</button>
+      <button class="btn btn-light">3</button>
+      <button class="btn btn-light">4</button>
       <button class="btn btn-light">Next</button>
+    </div>
 
+    <!-- Modal + -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Tạo mới hợp đồng chi tiết</h5>
+
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label>Ngày bắt đầu:</label>
+              <input type="date" class="form-control" id="1">
+            </div>
+            <div class="form-group" style="margin-top: 1.5rem">
+              <label>Ngày kết thúc:</label>
+              <input type="date" class="form-control" id="2">
+            </div>
+            <div class="form-group" style="margin-top: 1.5rem">
+              <label>Số tiền gửi:</label>
+              <input type="text" class="form-control" id="3">
+            </div>
+            <div class="form-group" style="margin-top: 1.5rem">
+              <label>Tổng tiền:</label>
+              <input type="text" class="form-control" id="4">
+            </div>
+            <div class="form-group" style="margin-top: 1.5rem">
+              <select name="customer" class="form-control custom-select bg-light" id="customer">
+                <option> Khách hàng thuê
+                </option>
+              </select>
+            </div>
+            <div class="form-group" style="margin-top: 1.5rem">
+              <select name="facility" class="form-control custom-select bg-light" id="facility">
+                <option value="1">Villa</option>
+                <option value="1">House</option>
+                <option value="1">Room</option>
+              </select>
+            </div>
+            <div class="form-group" style="margin-top: 1.5rem">
+              <label>Dịch vụ đi kèm:</label>
+              <button type="button" class=" btn btn-primary" style="margin-left: 1rem">
+                +
+              </button>
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hủy bỏ</button>
+            <button type="button" class="btn btn-primary">Tạo hợp đồng</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-<app-modal-create-contract></app-modal-create-contract>
+
