--- a/case2/src/app/contract/create-contract/create-contract.component.html
+++ b/case2/src/app/contract/create-contract/create-contract.component.html
@@ -1,39 +1,70 @@
-
-<!--                modal create contract-->
-
-<div class="modal" id="myModalCreateContract">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="p-3 bg-modal">
-        <h4 style="text-align: center">Add New Customer</h4>
-
-        <div class="form-group">
-          <label>Time Start</label>
-          <input class="form-control" type="date" id="add-customerCode">
-        </div>
-
-        <div class="form-group">
-          <label>Time End</label>
-          <input class="form-control" type="date" id="add-customerName">
-
-        </div>
-
-        <div class="form-group">
-          <label>Deposit Amount</label>
-          <input class="form-control" type="text" id="add-customerBirthday">
-
-        </div>
-
-        <div class="form-group">
-          <label>Payment Amount</label>
-          <input class="form-control" type="text" id="total-money">
-        </div>
-
-        <div class="modal-footer">
-          <button class="btn btn-secondary" type="submit">Add new</button>
-          <button class="btn btn-primary" type="submit" data-dismiss="modal">Cancel</button>
-        </div>
+<div class="container" style="width: 60%">
+  <div class="bg-white">
+    <div class="h1 center-box "> Thêm mới hợp đồng</div>
+    <form  class="p-3"  [formGroup]="contractForm" (ngSubmit)=createContract()>
+      <div class="form-group">
+        <label>Nhập ngày bắt đầu:</label>
+        <input type="date" class="form-control" placeholder="Enter name"  formControlName="startDate">
+        <p style="color: red"
+           *ngIf="contractForm.controls.startDate.hasError('required')&& (contractForm.controls.startDate.touched)">
+          Không để trống
+        </p>
       </div>
-    </div>
+      <div class="form-group" style="margin-top: 1.5rem">
+        <label>Ngày kết thúc:</label>
+        <input type="date" class="form-control" formControlName="endDate" >
+        <p style="color: red"
+           *ngIf="contractForm.controls.endDate.hasError('required')&& (contractForm.controls.endDate.touched)">
+          Không để trống
+        </p>
+      </div>
+
+      <div class="form-group" style="margin-top: 1.5rem">
+        <label>Tiền cọc </label>
+        <input type="number" class="form-control" formControlName="deposits" >
+        <p style="color: red"
+           *ngIf="contractForm.controls.deposits.hasError('required')&& (contractForm.controls.deposits.touched)">
+          Không để trống
+        </p>
+        <p style="color: red"
+           *ngIf="contractForm.controls.deposits.hasError('min')&& (contractForm.controls.deposits.touched)">
+          Không âm
+        </p>
+      </div>
+
+      <div class="form-group" style="margin-top: 1.5rem">
+        <label>Khách hàng</label>
+        <select name="customer" class="form-control custom-select bg-light"  formControlName="customer">
+          <option *ngFor="let item of customerList " [ngValue]="item.id">{{item.name}}</option>
+        </select>
+        <p style="color: red"
+           *ngIf="contractForm.controls.customer.hasError('required')&& (contractForm.controls.customer.touched)">
+          Không để trống
+        </p>
+      </div>
+
+      <div class="form-group" style="margin-top: 1.5rem">
+        <label>Dịch vụ </label>
+        <select name="facility" class="form-control custom-select bg-light"  formControlName="facility">
+          <option *ngFor="let item of facilityList " [ngValue]="item.id">{{item.name}}</option>
+        </select>
+        <p style="color: red"
+           *ngIf="contractForm.controls.facility.hasError('required')&& (contractForm.controls.facility.touched)">
+          Không để trống
+        </p>
+
+      </div>
+
+      <div class="form-group" style="margin-top: 1.5rem">
+        <label>Dịch vụ đính kèm:</label>
+        <button class="btn btn-primary" type="submit" style="margin-left: 1rem">+</button>
+      </div>
+
+      <div class="form-group" style="margin-top: 1.5rem">
+        <button [routerLink]="['/contract/list-contract']" type="submit" class="btn btn-primary" value="Back"> Quay lại</button>
+        <button  class="btn btn-primary" style="margin: 1.5rem 1rem">Thêm mới hợp đồng</button>
+      </div>
+    </form>
   </div>
 </div>
+
