--- a/case2/src/app/facility/update-facility/update-facility.component.html
+++ b/case2/src/app/facility/update-facility/update-facility.component.html
@@ -1,94 +1,124 @@
-<div class="modal" id="myModalUpdateFacility">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="p-3 bg-modal">
-        <h4 style="text-align: center">Update Facility</h4>
-        <div class="form-group">
-          <input class="form-control" type="hidden" id="add-serviceId">
-
-          <div class="form-group">
-            <label>Loại dịch vụ</label>
-            <select class="form-control w-100" id="add-serviceType" (change)="(getType($event.target.value))">
-              <option value="1">Villa</option>
-              <option value="2">House</option>
-              <option value="3">Room</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Mã dịch vụ</label>
-            <input class="form-control" type="text" id="add-serviceCode">
-
-          </div>
-
-          <div class="form-group">
-            <label>Tên dịch vụ</label>
-            <input class="form-control" type="text" id="add-serviceName">
-
-
-          </div>
-
-          <div class="form-group">
-            <label>Diện tích sử dụng</label>
-            <input class="form-control" type="text" id="add-serviceArea">
-
-
-          </div>
-
-          <div class="form-group">
-            <label>Giá</label>
-            <input class="form-control" type="text" id="add-serviceCost">
-
-
-          </div>
-
-          <div class="form-group">
-            <label>Số người tối đa</label>
-            <input class="form-control" type="text" id="add-serviceMaxPeople">
-
-
-          </div>
-
-          <div class="form-group" id="add-standardRoom" *ngIf="type==='1' || type ==='2'" type="hidden">
-            <label>Tiêu chuẩn phòng</label>
-            <input class="form-control" type="text">
-          </div>
-
-          <div class="form-group" id="add-descriptionOtherConvenience"*ngIf="type==='1' || type ==='2'" type="hidden">
-            <label>Mô tả tiện nghi khác</label>
-            <input class="form-control" type="text">
-
-
-          </div>
-
-          <div class="form-group" id="add-poolArea"*ngIf="type==='1'" type="hidden">
-            <label>Diện tích hồ bơi</label>
-            <input class="form-control" type="text">
-
-          </div>
-
-          <div class="form-group" id="add-numberOfFloors"*ngIf="type==='1' || type ==='2'" type="hidden">
-            <label>Số tầng</label>
-            <input class="form-control" type="text">
-
-
-          </div>
-
-          <div class="form-group">
-            <label>Kiểu thuê</label>
-            <select class="form-control w-100" id="add-rentType">
-              <option value="1">Thuê theo năm</option>
-              <option value="2">Thuê theo tháng</option>
-              <option value="3">Thuê theo ngày</option>
-              <option value="4">Thuê theo giờ</option>
-            </select>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close
-            </button>
-            <button type="button" class="btn btn-primary">Delete</button>
-          </div>
+<div class="container" style="width: 50rem;margin: auto">
+  <div class="row">
+    <div class="bg-white">
+      <div class="h1 center-box "> Chỉnh sửa dịch vụ </div>
+      <form class="p-3" [formGroup]="facilityForm" (ngSubmit)="updateFacility()">
+        <input type="text" hidden formControlName="id">
+        <div class="form-group" style="margin-bottom: 1rem">
+          <label >Tên</label>
+          <input type="text" class="form-control"  formControlName="name">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.name.hasError('required')&& (facilityForm.controls.name.touched)">
+            Không để trống
+          </p>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.name.hasError('pattern')&& (facilityForm.controls.name.touched)">
+            Phải đúng định dạng
+          </p>
         </div>
-      </div>
+
+        <div class="form-group" style="margin-bottom: 1rem">
+          <label>Diện tích sử dụng:</label>
+          <input type="number" class="form-control"  name="area" formControlName="area">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.area.hasError('required')&& (facilityForm.controls.area.touched)">
+            Không để trống
+          </p>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.area.hasError('min')&& (facilityForm.controls.area.touched)">
+            Không thể bằng 0
+          </p>
+        </div>
+
+        <div class="form-group" style="margin-bottom: 1rem">
+          <label>Giá:</label>
+          <input type="number" class="form-control" name="cost" formControlName="cost" >
+          <p style="color: red"
+             *ngIf="facilityForm.controls.cost.hasError('required')&& (facilityForm.controls.cost.touched)">
+            Không để trống
+          </p>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.cost.hasError('pattern')&& (facilityForm.controls.cost.touched)">
+            Không âm
+          </p>
+        </div>
+        <div class="form-group" style="margin-bottom: 1rem">
+          <label>Số người tối đa</label>
+          <input class="form-control" type="number"  name="maxPeople" formControlName="maxPeople">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.maxPeople.hasError('required')&& (facilityForm.controls.maxPeople.touched)">
+            Không để trống
+          </p>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.maxPeople.hasError('min')&& (facilityForm.controls.maxPeople.touched)">
+            Không âm
+          </p>
+        </div>
+        <div class="form-group" style="margin-bottom: 1rem" >
+          <label>Tiêu chuẩn phòng</label>
+          <input class="form-control" type="text" name="standardRoom" formControlName="standardRoom">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.standardRoom.hasError('required')&& (facilityForm.controls.standardRoom.touched)">
+            Không để trống
+          </p>
+        </div>
+        <div class="form-group"  >
+          <label>Mô tả tiện nghi khác</label>
+          <input class="form-control" type="text" name="descriptionOtherConvenience" formControlName="descriptionOtherConvenience">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.descriptionOtherConvenience.hasError('required')&& (facilityForm.controls.descriptionOtherConvenience.touched)">
+            Không để trống
+          </p>
+        </div>
+        <div class="form-group" >
+          <label>Diện tích hồ bơi</label>
+          <input class="form-control" type="number" name="poolArea" formControlName="poolArea">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.poolArea.hasError('required')&& (facilityForm.controls.poolArea.touched)">
+            Không để trống
+          </p>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.poolArea.hasError('pattern')&& (facilityForm.controls.poolArea.touched)">
+            Không âm
+          </p>
+        </div>
+        <div class="form-group" >
+          <label>Số tầng</label>
+          <input class="form-control" type="number" name="numberOfFloors" formControlName="numberOfFloors">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.numberOfFloors.hasError('required')&& (facilityForm.controls.numberOfFloors.touched)">
+            Không để trống
+          </p>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.numberOfFloors.hasError('pattern')&& (facilityForm.controls.numberOfFloors.touched)">
+            Không âm
+          </p>
+        </div>
+        <div class="form-group">
+          <label>Kiểu thuê</label>
+          <select class="form-control w-100" id="add-rentType" formControlName="rentType">
+            <option *ngFor="let item of rentTypeList" [ngValue]="item.id">{{item.name}}</option>
+          </select>
+          <p style="color: red"
+             *ngIf="facilityForm.controls.rentType.hasError('required')&& (facilityForm.controls.rentType.touched)">
+            Không để trống
+          </p>
+        </div>
+        <div class="form-group" >
+          <label>URL</label>
+          <input class="form-control" type="text" name="url" formControlName="url">
+          <p style="color: red"
+             *ngIf="facilityForm.controls.url.hasError('required')&& (facilityForm.controls.url.touched)">
+            Không để trống
+          </p>
+        </div>
+
+        <div style="margin-bottom: 1rem;margin-top: 5px">
+          <button [routerLink]="['/facility/list-facility']" type="submit" class="btn btn-primary" value="Back"> Quay lại</button>
+          <button class="btn btn-danger" style="margin-left: 5px">Chỉnh sửa</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
+
