--- a/case2/src/app/footer/footer.component.html
+++ b/case2/src/app/footer/footer.component.html
@@ -85,10 +85,10 @@
             <h3 class="footer_title">
               Newsletter
             </h3>
-            <form action="#" class="newsletter_form">
+<!--            <form action="#" class="newsletter_form">-->
               <input type="text" placeholder="Enter your mail">
               <button type="submit">Sign Up</button>
-            </form>
+<!--            </form>-->
             <p class="newsletter_text">Subscribe newsletter to get updates</p>
           </div>
         </div>
