--- a/case2/src/app/header/header.component.html
+++ b/case2/src/app/header/header.component.html
@@ -12,9 +12,9 @@
               <nav>
                 <ul id="navigation">
                   <li><a routerLink="['/home']">Home</a></li>
-                  <li><a routerLink="/facility">Facility</a></li>
-                  <li><a routerLink="/customer">Customer</a></li>
-                  <li><a routerLink="/contract">Contract</a></li>
+                  <li><a routerLink="/facility/list-facility">Facility</a></li>
+                  <li><a routerLink="/customer/list-customer">Customer</a></li>
+                  <li><a routerLink="/contract/list-contract">Contract</a></li>
                 </ul>
               </nav>
             </div>
