--- a/case2/src/app/contract/contract/contract.component.html
+++ b/case2/src/app/contract/contract/contract.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
   <div class="row" style="margin-top: 1rem">
-    <div class="col-3">
+    <div >
       <div style="text-align: center">
         <a>
         <button type="button" class="btn btn-primary">
@@ -14,8 +14,7 @@
       </div>
     </div>
 
-    <table id="tableContract" class="table table-success table-striped"
-           border="2" style="border-collapse:  collapse;padding-top: 10px;width: 96%;margin: auto">
+    <table id="tableContract" class="bg-menu table text-center table  font-weight-bol">
       <thead>
       <tr>
         <th>No.</th>
