--- a/case2/src/app/contract/create-contract/create-contract.component.html
+++ b/case2/src/app/contract/create-contract/create-contract.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 60%">
+<div class="container" style="width: 60%; margin-top: 100px">
   <div class="bg-white">
     <div class="h1 center-box "> Thêm mới hợp đồng</div>
     <form  class="p-3"  [formGroup]="contractForm" (ngSubmit)=createContract()>
