--- a/case2/src/app/customer/create-customer/create-customer.component.html
+++ b/case2/src/app/customer/create-customer/create-customer.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="width: 50rem;margin: auto">
+<div class="container" style="width: 50rem;margin-top: 100px">
   <div class="row">
     <div class="bg-white">
       <div class="h1 center-box "> Thêm mới Customer </div>
@@ -87,7 +87,7 @@
         <div class="form-group" style="margin-bottom: 1rem">
           <label> Kiểu khách hàng : </label>
           <select name="customerType" class="form-control custom-select bg-light" id="customerType" formControlName="customerType">
-            <option *ngFor="let item of customerTypeList" [ngValue]="item.id">{{item.name}}</option>
+            <option *ngFor="let item of customerTypes" [ngValue]="item.id">{{item.name}}</option>
           </select>
         </div>
         <div style="margin-bottom: 1rem;margin-top: 5px">
